--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "npm run start"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport": "^0.7.0"
   }
 }
